--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
       with:
         java-version: '17'
 		distribution: 'temurin'
+		package: 'jdk'
+		
 
     - name: Build with Maven
       run: mvn install
