--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,13 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-    <!--    <dependency>
+        
+      <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.4.0</version>
     <scope>test</scope>
-</dependency>-->
+</dependency>
 
     </dependencies>
 
